@@ -14,15 +14,10 @@
 
 namespace Castle.Core.Interceptor
 {
-	/// <summary>
-	/// Basic implementation of <see cref="IInterceptor"/>
-	/// </summary>
-	public class StandardInterceptor : IInterceptor
+	using System;
+
+	public class StandardInterceptor : MarshalByRefObject, IInterceptor
 	{
-		/// <summary>
-		/// Intercepts the specified invocation.
-		/// </summary>
-		/// <param name="invocation">The invocation.</param>
 		public void Intercept(IInvocation invocation)
 		{
 			PreProceed(invocation);
@@ -30,20 +25,14 @@ namespace Castle.Core.Interceptor
 			PostProceed(invocation);
 		}
 
-		/// <summary>
-		/// Pre-process the invocation.
-		/// </summary>
-		/// <param name="invocation">The invocation.</param>
 		protected virtual void PreProceed(IInvocation invocation)
 		{
+
 		}
 
-		/// <summary>
-		/// Post-process the invocation.
-		/// </summary>
-		/// <param name="invocation">The invocation.</param>
 		protected virtual void PostProceed(IInvocation invocation)
 		{
+
 		}
 	}
 }
